# ace

./: .gitignore  .projections.json  .travis.yml  .ycm_extra_conf.py  404.html  CMakeLists.txt  CNAME  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  conanfile.txt  index.html  mkdocs.yml  search.html  sitemap.xml
formats/hjson/: Array.cpp  Array.h  CMakeLists.txt  Common.cpp  Common.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Scanner.cpp  Scanner.h
formats/ini/: Array.cpp  Array.h  CMakeLists.txt  Common.cpp  Common.h  Ini.cpp  Ini.h  Lexer.h  Lexer.rl  Object.cpp  Object.h  Parser.y  Primitive.cpp  Primitive.h  Scanner.cpp  Scanner.h
formats/json/: Array.cpp  Array.h  CMakeLists.txt  Common.cpp  Common.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Scanner.cpp  Scanner.h
formats/lua/: Array.cpp  Array.h  CMakeLists.txt  Common.cpp  Common.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Scanner.cpp  Scanner.h
formats/python/: Array.cpp  Array.h  CMakeLists.txt  Common.cpp  Common.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Scanner.cpp  Scanner.h
formats/toml/: Array.cpp  Array.h  CMakeLists.txt  Common.cpp  Common.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Scanner.cpp  Scanner.h  Toml.h
formats/yaml/: Array.cpp  Array.h  CMakeLists.txt  Common.cpp  Common.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Scanner.cpp  Scanner.h
libace/: CMakeLists.txt
libace/common/: Arguments.cpp  CMakeLists.txt  Log.cpp  Path.cpp  Regex.cpp  String.cpp
libace/engine/: CMakeLists.txt  Master.cpp
libace/filesystem/: CMakeLists.txt  Directory.cpp  File.cpp  Node.cpp  Path.cpp  Utils.cpp
libace/model/: Arity.cpp  ArityAttribute.cpp  Attribute.cpp  AttributeSet.cpp  Author.cpp  BasicType.cpp  Body.cpp  CMakeLists.txt  Coach.cpp  Dependency.cpp  DependencyAttribute.cpp  DisableDependency.cpp  FileModeAttribute.cpp  FormatChecker.cpp  Generator.cpp  Header.cpp  Helper.cpp  Hook.cpp  HookAttribute.cpp  Model.cpp  ModelAttribute.cpp  Object.cpp  RequireDependency.cpp  Section.cpp
libace/tree/: Array.cpp  CMakeLists.txt  Checker.cpp  Item.cpp  Lexer.rl  Object.cpp  Parser.y  Path.cpp  Primitive.cpp  Scanner.cpp  Utils.cpp  Value.cpp
libace/types/: Boolean.cpp  CMakeLists.txt  CPUID.cpp  Class.cpp  Enum.cpp  File.cpp  Float.cpp  IPv4.cpp  Integer.cpp  MAC.cpp  Plugin.cpp  Selector.cpp  String.cpp  URI.cpp
tests/: Boolean.cpp  CMakeLists.txt  CPUID.cpp  Class.cpp  Default.cpp  Dependency.cpp  Enum.cpp  Float.cpp  Includes.cpp  Integer.cpp  MAC.cpp  Model.cpp  String.cpp  Template.cpp  URI.cpp  main.cpp
tests/arity/: 00_NegativeArityLeft.json  02_Empty.lua  02_LeftOpenRange.json  02_RightOpenRange.json
tests/boolean/: 00_BadDefault.json  00_BadRange.json  01_BadArity.lua
tests/class/: 00_BadDefault.json  00_MissingModel.json  01_Ok.json  01_Ok.lua  02_Ok.json
tests/codegen/: CMakeLists.txt  Class.json  Model.json  config.toml  main.cpp  verifier.cpp
tests/default/: 00_BadInnerValue.json
tests/dependency/: 00_BadWhen.json  00_UnboundWildcard.json  01_Ok.json  02_NestedWildcardMissing.lua  03_Template.json  03_Template.lua  04_Arrays.json  04_Arrays.lua  05_ArrayOfStrings.json  05_ArrayOfStrings.lua  06_Constraint.lua  06_ConstraintOutsideEnum.lua  06_ConstraintOutsideRange.lua  07_Disable.json  07_Disable.lua  07_DisableChainedDeps.lua  07_DisableConflict.lua  07_DisableValueInUse.lua  08_BadFormat.lua  09_InvalidConstraintRange.json  09_InvalidConstraintRangeFormat.json  11_UndefinedPath.json  12_MismatchedConstraintType.json  13_UnboundNestedWildcard.json  14_MissingWildcard.lua  14_Wildcard.json  15_MissingRecursiveL2.lua  15_Recursive.lua  17_MissingRecursiveSelectorL1.lua  17_MissingRecursiveSelectorL2.lua  17_RecursiveSelector.lua  18_MissingPluginL1.lua  18_MissingPluginL2.lua  18_Plugin.json  18_Plugin.lua
tests/file/: 01_Ok.json  01_Ok.lua  02_DirectoryAlreadyExists.json  symlink_file
tests/float/: 00_BadConstrainedDefault.json  00_BadEither.json  00_BadRange.json  00_EitherAndRange.json  01_BadEither.lua  01_BadValue.lua  01_Ok.lua
tests/hook/: 01_MissingMatch.lua  02_GlobalPath.json  02_Ok.lua
tests/includes/: AllDefaulted.json  Inheritance.json  Trigger.json
tests/integer/: 00_BadDefault.json  00_BadEither.json  00_BadRange.json  01_BadArity.lua  01_Ok.json  01_Ok.lua
tests/libace/: Arity.cpp  Boolean.cpp  CMakeLists.txt  CPUID.cpp  Class.cpp  Common.h  Default.cpp  Dependency.cpp  Enum.cpp  File.cpp  Float.cpp  Hook.cpp  Includes.cpp  Integer.cpp  MAC.cpp  Model.cpp  Plugin.cpp  Range.cpp  Select.cpp  String.cpp  Template.cpp  Tree.cpp  URI.cpp  main.cpp
tests/libace/arity/: 00_BadArity.json  00_BadRange.json  00_NegativeArityRight.json  01_All.lua  01_Ok.json  02_Large.lua  02_Small.lua
tests/libace/boolean/: 00_BadConstrainedDefault.json  00_BadEither.json  00_EitherAndRange.json  01_Ok.json  01_Ok.lua  02_BadValue.lua  02_Dependencies.json  02_Ok.lua
tests/libace/class/: 00_InvalidFlatArity.json  00_InvalidModel.json  01_Ok.json  01_Ok.lua  02_Ok.lua  03_Bad.json  (+1 more)
tests/mac/: 01_Ok.json  01_Ok.lua
tests/model/: 00_BadAuthor.json  00_BadContent.json  00_BadFormat.json  00_BadVarName.json  00_EmptyInclude.json  00_IncludeConflict.json  00_TypeCircularReference.json  01_Ok.json
tests/plugin/: 00_BadAncestor.json  00_BadArityPlus.json  00_BadTargetArity.json  00_InvalidModel.json  00_MissingModel.json  01_BadTargetArity.lua  01_DerivedOk.lua  01_Ok.json  01_Ok.lua  02_Dependencies.lua  03_MultiTargetArity.lua  03_TriggeredMultiTargetArity.json  04_MultipleUseOfBase.json  04_MultipleUseOfBase.lua
tests/range/: 00_BadBounds.json  00_BadType.json  01_Ok.json  01_Ok.lua
tests/select/: 00_BadTemplate.json  01_Ok.json  01_Ok.lua  02_Dependencies.json  02_Missing.lua  02_Ok.lua  03_Complex.json  03_Ok.lua
tests/string/: 00_BadConstrainedDefault.json  00_BadEither.json  01_Ok.lua  02_Ok.json
tests/template/: 02_Ok.json
tests/uri/: 00_BadConstrainedDefault.json  00_BadEither.json  02_Ok.json  02_Ok.lua
tools/: CMakeLists.txt  compile.cpp  convert.cpp  explain.cpp  path.cpp  validate.cpp
(+220 files in other folders)
